Add jpa DTO for Menu